fetching raw directions response instead of rebuilding it